--- a/ödev_1.ipynb
+++ b/ödev_1.ipynb
@@ -6,7 +6,7 @@
       "name": "ödev_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPevD8yMe5qsCUyUBCoTMrZ",
+      "authorship_tag": "ABX9TyPgAi6s4P493hr6/BdGjMVs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,11 +30,11 @@
       "metadata": {
         "id": "z81qEARQ427z",
         "colab_type": "code",
+        "outputId": "6d256f48-2714-4635-bd23-03bb7f11a30e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "128311de-135e-4105-c9ed-60976963d3ab"
+          "height": 51
+        }
       },
       "source": [
         "from pylab import *\n",
@@ -42,18 +42,37 @@
         "\n",
         "def permutation(n):\n",
         "  p = 1\n",
-        "  for i in range(1,n+1):\n",
-        "    p = p*i\n",
+        "  for i in range(n):\n",
+        "    p = p * (i+1)\n",
         "  return p\n",
-        "n = 5\n",
-        "print(n, \" kişi \", permutation(n) , \"şekilde sıralanabilir.\")\n"
+        "\n",
+        "def kelimeSayisi(kelime):\n",
+        "  harfSayisi = dict()\n",
+        "  \n",
+        "  for h in kelime:\n",
+        "    if h in harfSayisi:\n",
+        "      harfSayisi[h] = harfSayisi[h] + 1\n",
+        "    else:\n",
+        "      harfSayisi[h] = 1\n",
+        "  \n",
+        "  p = permutation(len(kelime))\n",
+        "  \n",
+        "  for key in harfSayisi:\n",
+        "    if harfSayisi[key] == 1:\n",
+        "      continue\n",
+        "    p = p / permutation(harfSayisi[key])\n",
+        "  return int(p)\n",
+        "\n",
+        "kelime = input(\"Bir kelime giriniz: \")\n",
+        "print(kelime, \" kelimesinin içerdiği harflerle \", kelimeSayisi(kelime) , \"farklı kelime yazılabililr.\")\n"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "5  kişi  120 şekilde sıralanabilir.\n"
+            "Bir kelime giriniz: kelebek\n",
+            "kelebek  kelimesinin içerdiği harflerle  420 farklı kelime yazılabililr.\n"
           ],
           "name": "stdout"
         }
