--- a/ödev_1.ipynb
+++ b/ödev_1.ipynb
@@ -6,7 +6,7 @@
       "name": "ödev_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPgAi6s4P493hr6/BdGjMVs",
+      "authorship_tag": "ABX9TyPpece1yC4PEExNqQgCJH8m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,17 +30,20 @@
       "metadata": {
         "id": "z81qEARQ427z",
         "colab_type": "code",
-        "outputId": "6d256f48-2714-4635-bd23-03bb7f11a30e",
+        "outputId": "ae365492-6175-4ebf-ba89-53b0ca649c21",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
         }
       },
       "source": [
+        "# Program girilen bir kelime için, içerdiği harflerden oluşabilecek anlamlı veya anlamsız tüm katar sayısını vermektedir.\n",
+        "# Girilen kelime bir karakteri birden fazla içeriyorsa tekrarlı permütasyonu hesaplayarak sonuç bulunur.\n",
+        "\n",
         "from pylab import *\n",
         "import numpy as np\n",
         "\n",
-        "def permutation(n):\n",
+        "def factorial(n):\n",
         "  p = 1\n",
         "  for i in range(n):\n",
         "    p = p * (i+1)\n",
@@ -55,24 +58,24 @@
         "    else:\n",
         "      harfSayisi[h] = 1\n",
         "  \n",
-        "  p = permutation(len(kelime))\n",
+        "  p = factorial(len(kelime))\n",
         "  \n",
         "  for key in harfSayisi:\n",
         "    if harfSayisi[key] == 1:\n",
         "      continue\n",
-        "    p = p / permutation(harfSayisi[key])\n",
+        "    p = p / factorial(harfSayisi[key])\n",
         "  return int(p)\n",
         "\n",
         "kelime = input(\"Bir kelime giriniz: \")\n",
         "print(kelime, \" kelimesinin içerdiği harflerle \", kelimeSayisi(kelime) , \"farklı kelime yazılabililr.\")\n"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Bir kelime giriniz: kelebek\n",
-            "kelebek  kelimesinin içerdiği harflerle  420 farklı kelime yazılabililr.\n"
+            "Bir kelime giriniz: alabalık\n",
+            "alabalık  kelimesinin içerdiği harflerle  3360 farklı kelime yazılabililr.\n"
           ],
           "name": "stdout"
         }
