--- a/ödev_1.ipynb
+++ b/ödev_1.ipynb
@@ -6,7 +6,7 @@
       "name": "ödev_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPpece1yC4PEExNqQgCJH8m",
+      "authorship_tag": "ABX9TyNb5FvtNkUQ64XyJV4mVyyc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "z81qEARQ427z",
         "colab_type": "code",
-        "outputId": "ae365492-6175-4ebf-ba89-53b0ca649c21",
+        "outputId": "30c52c42-0366-458c-dcb6-e17557f8be79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -51,6 +51,7 @@
         "\n",
         "def kelimeSayisi(kelime):\n",
         "  harfSayisi = dict()\n",
+        "  kelime = kelime.lower()\n",
         "  \n",
         "  for h in kelime:\n",
         "    if h in harfSayisi:\n",
@@ -69,13 +70,13 @@
         "kelime = input(\"Bir kelime giriniz: \")\n",
         "print(kelime, \" kelimesinin içerdiği harflerle \", kelimeSayisi(kelime) , \"farklı kelime yazılabililr.\")\n"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Bir kelime giriniz: alabalık\n",
-            "alabalık  kelimesinin içerdiği harflerle  3360 farklı kelime yazılabililr.\n"
+            "Bir kelime giriniz: Alabalık\n",
+            "Alabalık  kelimesinin içerdiği harflerle  3360 farklı kelime yazılabililr.\n"
           ],
           "name": "stdout"
         }
