--- a/ödev_1.ipynb
+++ b/ödev_1.ipynb
@@ -6,7 +6,7 @@
       "name": "ödev_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNb5FvtNkUQ64XyJV4mVyyc",
+      "authorship_tag": "ABX9TyPy+Y0OsHm54MEVEDR8nb+i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,36 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/semihsevmm/probability/blob/master/%C3%B6dev_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uIsUBh8v1-5m",
+        "colab_type": "text"
+      },
+      "source": [
+        "$({n_1,n_2,n_3,...})$ sayıda tekrarlı eleman içeren  n elemanlı bir kümenin sıralanması;\n",
+        "\n",
+        "$\\frac{n!}{n_1!n_2!n_3!...}$\n",
+        "\n",
+        "formülü ile hesaplanır.\n",
+        "\n",
+        "Örnek: Alabalık kelimesinin harflerinden anlamlı veya anlamsız kaç farklı kelime türetilebilir.\n",
+        "\n",
+        "$a=3$\\\n",
+        "$l=2$\\\n",
+        "$b=1$\\\n",
+        "$ı=1$\\\n",
+        "$k=1$\\\n",
+        "$Toplam=8$\n",
+        "\n",
+        "\n",
+        " 8 harli \"Alabalık\" içerisinde a harfi 3, l harfi 2 kere tekrar etmektedir. Bu koşullar altında türetilebilecek kelime sayısı;\n",
+        "\n",
+        "$\\frac{8!}{3!2!}=3360$\n",
+        "\n",
+        "olarak bulunur."
       ]
     },
     {
@@ -52,15 +82,16 @@
         "def kelimeSayisi(kelime):\n",
         "  harfSayisi = dict()\n",
         "  kelime = kelime.lower()\n",
-        "  \n",
+        "  #For döngüsü ile birlikte tekararlanan karakterlerin sayısı bir dict içerisinde tutulur.\n",
         "  for h in kelime:\n",
         "    if h in harfSayisi:\n",
         "      harfSayisi[h] = harfSayisi[h] + 1\n",
         "    else:\n",
         "      harfSayisi[h] = 1\n",
-        "  \n",
+        "  #Kelime uzunluğunun faktöriyeli hesaplanır.\n",
         "  p = factorial(len(kelime))\n",
         "  \n",
+        "  #For döngüsü içerisinde kelime uzunluğunun fakötriyeli tekrar eden karakter sayılarının faktöriyeline bölünür.\n",
         "  for key in harfSayisi:\n",
         "    if harfSayisi[key] == 1:\n",
         "      continue\n",
@@ -70,7 +101,7 @@
         "kelime = input(\"Bir kelime giriniz: \")\n",
         "print(kelime, \" kelimesinin içerdiği harflerle \", kelimeSayisi(kelime) , \"farklı kelime yazılabililr.\")\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
