--- a/ödev_1.ipynb
+++ b/ödev_1.ipynb
@@ -6,7 +6,7 @@
       "name": "ödev_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPy+Y0OsHm54MEVEDR8nb+i",
+      "authorship_tag": "ABX9TyNlm+Rc4tB1tN7gabtvCaMv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,25 +34,39 @@
       "source": [
         "$({n_1,n_2,n_3,...})$ sayıda tekrarlı eleman içeren  n elemanlı bir kümenin sıralanması;\n",
         "\n",
+        "\n",
         "$\\frac{n!}{n_1!n_2!n_3!...}$\n",
+        "\n",
         "\n",
         "formülü ile hesaplanır.\n",
         "\n",
+        "\n",
         "Örnek: Alabalık kelimesinin harflerinden anlamlı veya anlamsız kaç farklı kelime türetilebilir.\n",
         "\n",
-        "$a=3$\\\n",
-        "$l=2$\\\n",
-        "$b=1$\\\n",
-        "$ı=1$\\\n",
-        "$k=1$\\\n",
-        "$Toplam=8$\n",
+        "\n",
+        "a=3\n",
+        "\n",
+        "l=2\n",
+        "\n",
+        "b=1\n",
+        "\n",
+        "ı=1\n",
+        "\n",
+        "k=1\n",
+        "\n",
+        "Toplam=8\n",
+        "\n",
         "\n",
         "\n",
         " 8 harli \"Alabalık\" içerisinde a harfi 3, l harfi 2 kere tekrar etmektedir. Bu koşullar altında türetilebilecek kelime sayısı;\n",
         "\n",
+        "\n",
         "$\\frac{8!}{3!2!}=3360$\n",
         "\n",
-        "olarak bulunur."
+        "\n",
+        "olarak bulunur.\n",
+        "\n",
+        "Semih SEVİM 196112005"
       ]
     },
     {
