--- a/ödev_3.ipynb
+++ b/ödev_3.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ödev_3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMgDbLgMOwXqhLWSFbxXmhM",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNDKixuIOtRB03Lulik4RZo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,145 +28,175 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "p87Xt8e6ChME",
+        "id": "8b3jU0hLRvVp",
         "colab_type": "text"
       },
       "source": [
-        "##Semih Sevim 196112005\n",
+        "**Semih SEVİM 196112005**\n",
         "\n",
-        "**Problem 1:** Bir editör kontrol ettiği metinlerde %10 olasıkla yazım yanlışı bulmaktadır. Editörün herhangi bir metin içerisinde kontrol ettiği 20 kelimeden \n",
-        "7'sinin yanlış olma olasığı kaçtır?\n",
-        "\n",
-        "**Çözüm:**  P= $0.1$ olasılık ile kelimeler yanlış yazılmıştır. \n",
-        "$n = 20$ kelime içerisinde\n",
-        "$k = 7$ 'unun yanlış yazılma olasığılı;\n",
-        "\n",
-        "$P(Yanlış = k) = {n\\choose k} p^k(1-p)^{n-k} = {20\\choose 7} (0.1)^{7}(1-0.1)^{20-7} = 0.00197$\n",
+        "**Problem:** Sinyal iletiminde kanal üzerinde belirli bir gürültünün olduğu ve bitlerin $\\dfrac{1}{4}$ olasılıkla değiştiği bilinmektedir.  Ayrıca göndericinin ilettiği bitler $\\dfrac{2}{5}$  olasılıkla 0 değerini almaktadır.  Alıcı 11 bitlerini aldığına göre göndericinin 00 bitini gönderme olasılığı kaçtır? \n",
         "\n",
         "\n",
-        "\n"
+        "**Çözüm:** Kanal üzerinden 2 bit gönderildiğine göre alıcı ver göndericinin elindeki bitler  {00,01,10,11} şeklinde olabilir. Olay kümelerini tanımlarsak\n",
+        "\n",
+        "$ Gönderici = \\{G_0, G_1, G_2,G_3\\}$\\\n",
+        "$ Alıcı = \\{A_0, A_1, A_2,A_3\\}$\\\n",
+        "$ G_0 = A_0 = 00$\\\n",
+        "$ G_1 = A_1 = 01$\\\n",
+        "$ G_2 = A_2 = 10$\\\n",
+        "$ G_3 = A_3 = 11$\n",
+        "\n",
+        "şeklinde oluşturabiliriz.\n",
+        "\n",
+        "Öncelikle alıcının 11 bitlerini alma olasılığını hesaplayalım.  \n",
+        "$P(A_3) = P(A_3\\cap G_0) + P(A_3\\cap G_1) + P(A_3\\cap G_2) + P(A_3\\cap G_3)$\\\n",
+        "$P(A_3) = P(A_3|G_0)P(G_0) + P(A_3|G_1)P(G_1) + P(A_3|G_2)P(G_2) + P(A_3|G_3)P(G_3)$\n",
+        "\n",
+        "Gönderici 00 bitlerini gönderdiğinde alıcının 11 bitlerini alma olılığını hesaplayım. Bunun için iki bitinde değişme olasılığını bulmamız gerekir. Bir bitin değişme olasılığı $\\dfrac{1}{4}$ ise değişmeme olasılığı\n",
+        "$1-\\dfrac{1}{4} = \\dfrac{3}{4}$ olarek elde edilir.\n",
+        "\n",
+        "\\$P(A_3|G_0) = \\dfrac{1}{4}*\\dfrac{1}{4} = \\dfrac{1}{16}$\\\n",
+        "Aynı şekilde diper durumlarıda hesaplarsak;\n",
+        "\n",
+        "$P(A_3|G_1) = \\dfrac{1}{4}*\\dfrac{3}{4} = \\dfrac{3}{16}$\\\n",
+        "$P(A_3|G_2) = \\dfrac{3}{4}*\\dfrac{1}{4} = \\dfrac{3}{16}$\\\n",
+        "$P(A_3|G_3) = \\dfrac{3}{4}*\\dfrac{3}{4} = \\dfrac{9}{16}$\n",
+        "\n",
+        "değerlerini elde ederiz.\n",
+        "\n",
+        "Göndericinin 00 bitlerini gönderme olasılığını bulmak için bitlerin 00 olmas olasılını bulamamız gerekir. Bir bitin 0 olma olasığı $\\dfrac{2}{5}$ ise 1 olma olasılığı $1-\\dfrac{2}{5} = \\dfrac{3}{5}$'tir. \n",
+        "$P(G_0)=\\dfrac{2}{5}*\\dfrac{2}{5} = \\dfrac{4}{25}$\n",
+        "\n",
+        "Diğer bitlerin üretilme olasılıkları;\n",
+        "\n",
+        "$P(G_1)=\\dfrac{2}{5}*\\dfrac{3}{5} = \\dfrac{6}{25}$\\\n",
+        "$P(G_2)=\\dfrac{3}{5}*\\dfrac{2}{5} = \\dfrac{6}{25}$\\\n",
+        "$P(G_3)=\\dfrac{3}{5}*\\dfrac{3}{5} = \\dfrac{9}{25}$\n",
+        "\n",
+        "Böylece \n",
+        "\n",
+        "$P(A_3)=\\dfrac{1}{16}*\\dfrac{4}{25} + \\dfrac{3}{16}*\\dfrac{6}{25} + \\dfrac{3}{16}*\\dfrac{6}{25} + \\dfrac{9}{16}*\\dfrac{9}{25} = 0,3025 $ elde ederiz.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Alıcı 11 bitlerini aldığına göre göndericinin 00 bitlerini gönderme olasılığı;\n",
+        "\n",
+        "\n",
+        "$P(G_0|A_3)=\\dfrac{P(A_3|G_0)*P(G_0)}{P(A_3)}$\n",
+        "\n",
+        "$P(G_0|A_3)=\\dfrac{\\dfrac{1}{16}*\\dfrac{4}{25}}{0,3025} = 0.0597$"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-vTh10UXCiPl",
+        "id": "WCq2D-zgRq2X",
         "colab_type": "code",
+        "outputId": "dc37a7ab-8414-45a8-91df-cfb972ab0ad9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "04d79a10-5f3b-4cba-ea49-44b001c54631"
+        }
       },
       "source": [
-        "def faktoriyel(n):\n",
-        "  f = 1\n",
-        "  for i in range(1,n+1):\n",
-        "    f*=i\n",
-        "  return f\n",
+        "#Göndericinin gelebilecek sinyallerin olsılığı P_0_gelme bitin sıfıt gelme olasılığına göre hesaplanır.\n",
+        "def P_sinayl_uretme(gonderici_sinyal,P_0_gelme):\n",
+        "  P_gonderici_sinyal= {}\n",
+        "  for key in gonderici_sinyal:\n",
+        "    prob = 1\n",
+        "    for i in gonderici_sinyal[key]:\n",
+        "      if i == '0':\n",
+        "        prob *= P_0_gelme # bit 0 olduğunda sinyal olasılığı\n",
+        "      else:\n",
+        "        prob *= (1 - P_0_gelme) # bit 1 olduğunda sinyal olaslığı\n",
+        "    P_gonderici_sinyal[key] = prob\n",
+        "  \n",
+        "  return P_gonderici_sinyal\n",
         "\n",
-        "def kombinasyon(n,k):\n",
-        "  return faktoriyel(n)/(faktoriyel(k)*faktoriyel(n-k))\n",
         "\n",
-        "def Binomial(n,k,p):\n",
-        "  return kombinasyon(n, k)*(p**k)*((1-p)**(n-k))\n",
+        "# Göndericiden gelen \"g_sinyal\" sinyaline  göre alıcının \"a_sinyal\" alma koşull olasılığı\n",
+        "def P_alici_gondericiKosul(a_sinyal, g_sinyal, P_bit_degisme):\n",
+        "  degismeyen_bit_s = len((set(a_sinyal)&set(g_sinyal))) # Değişmeyen bit sayısı\n",
+        "  sinyal_bit_s = len(a_sinyal) # sinyal bit sayısı\n",
+        "  # \"sinyal_bit_s - degismeyen_bit_s\" değişen bit sayısı\n",
+        "  prob = (P_bit_degisme ** (sinyal_bit_s - degismeyen_bit_s)) * ((1 - P_bit_degisme) ** degismeyen_bit_s)\n",
+        "  \n",
+        "  return prob\n",
         "\n",
-        "t_kelime = 20 # incelenen toplam kelime sayısı\n",
-        "y_kelime = 7 # yanlış yazılması beklenen kelime sayısı\n",
-        "p = 0.1 # kelimenin yanlış yazılma olasılığı\n",
+        "alici = {'a_0':'00', 'a_1':'01','a_2':'10', 'a_3':'11'} # Göndericinin üretebileceği 2 bitlik sinyaller\n",
+        "gonderici = {'g_0':'00', 'g_1':'01', 'g_2':'10', 'g_3':'11'} # Alıcının alabileceği sinyaller\n",
         "\n",
-        "P_7 = Binomial(t_kelime, y_kelime, p) # 7 kelimenin yanlış yazılma olasılığı\n",
         "\n",
-        "print('7 kelimenin yanlış yazılma olasılığı : %.5f'%P_7)"
+        "P_bit_degisme = 1/4\n",
+        "P_0_gelme = 2/5\n",
+        "\n",
+        "\n",
+        "P_gonderici_sinyal = P_sinayl_uretme(gonderici, P_0_gelme) # Göndericinin üretebileceği 2 bitlik sinyallerin olasılığı\n",
+        "\n",
+        "\n",
+        "P_a_sinyal = 0 # Alıcıya \"11\" sinyalinin gelme olaslığı\n",
+        "for key in P_gonderici_sinyal:\n",
+        "  P_a_sinyal +=  P_alici_gondericiKosul(alici['a_3'], gonderici[key], P_bit_degisme) * P_gonderici_sinyal[key] # P(a_sinyal|g_i_sinyal)P(g_i_sinyal)\n",
+        "\n",
+        "# Alıcı '11' bitlerini aldığı bilindiğine göre göndericinin '00' bitlerini gönderme olasılığı\n",
+        "P_kosul_a_b =  P_alici_gondericiKosul(alici['a_3'], gonderici['g_0'], P_bit_degisme)     #P(11|00)\n",
+        "sonuc = (P_kosul_a_b * P_gonderici_sinyal['g_0']) / P_a_sinyal\n",
+        "\n",
+        "print('Sonuc : %.4f'%sonuc)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "7 kelimenin yanlış yazılma olasılığı : 0.00197\n"
+            "Sonuc : 0.0597\n"
           ],
           "name": "stdout"
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bYjZ_DdWCizd",
-        "colab_type": "text"
-      },
-      "source": [
-        "**Problem 2:** Bir ATM yazılımındaki bir bug nedeniyle yapılan 60 işlemden 5'ini gerçekleştirememektedir. Gerçekleştirilen 17 işlemden 3'ünün gerçekleşmeme olasılığı kaçtır?\n",
-        "\n",
-        "\n",
-        "**Çözüm:** ATM $P =\\frac{5}{60}$ olasılıkla yanlış işlem gerçekleştirmektedir. Gerçekleştirilen  n = 17 işlemin beklene değeri hesapnırsa;\n",
-        "\n",
-        "$E[X]=\\lambda = np = 17*\\frac{5}{12}$\n",
-        "\n",
-        "Yapılan işlemlerin k = 3'ünün hatalı olma olasılığı;\n",
-        "\n",
-        "$P(X=k) = \\frac{\\lambda^k}{k!}e^{-\\lambda}$\n",
-        "\n",
-        "$$P(X=3)= \\frac{17*\\frac{5}{12}^3}{3!}e^{-17*\\frac{5}{12}}=0.1869195312$$"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "5VksZ-EtCaqZ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "5d47fc25-e76b-47c5-9484-c677dd46ec3b"
-      },
-      "source": [
-        "import math\n",
-        "\n",
-        "def faktoriyel(n):\n",
-        "  f = 1\n",
-        "  for i in range(1,n+1):\n",
-        "    f*=i\n",
-        "  return f\n",
-        "\n",
-        "def Poisson(n, k, p):\n",
-        "  lamda = n * p\n",
-        "\n",
-        "  return ((lamda**k)/(faktoriyel(k))) * math.exp(-lamda)\n",
-        "\n",
-        "islem = 50 # işlem sayısı\n",
-        "h_islem = 3 # hatalı işlem sayısı\n",
-        "p = 5/60 # hatalı işlem gerçekleştirme olaslığı\n",
-        "\n",
-        "P_3 = Poisson(islem, h_islem, p) # 3 işlemin hatalı olma olasılığı\n",
-        "\n",
-        "print('3 işlemin hatalı olma olasılığı : %.10f'%P_3)"
-      ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3 işlemin hatalı olma olasılığı : 0.1869195312\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CyH_ia5iV_M5",
+        "id": "3lo1dqXnIm4i",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "a = len((set('00')&set('11')))"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X1PF_aq8Iu3s",
+        "colab_type": "code",
+        "outputId": "d68560e5-059d-4702-f338-05ab057ca241",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "2**3"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
     }
   ]
 }
