--- a/ödev_3.ipynb
+++ b/ödev_3.ipynb
@@ -6,7 +6,7 @@
       "name": "ödev_3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOz6TWpTF+XsAgp8gp82PX5",
+      "authorship_tag": "ABX9TyP79ynp0yiNwwWLEueLn75Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,8 @@
         "Gönderici 00 bitlerini gönderdiğinde alıcının 11 bitlerini alma olılığını hesaplayım. Bunun için iki bitinde değişme olasılığını bulmamız gerekir. Bir bitin değişme olasılığı $\\dfrac{1}{4}$ ise değişmeme olasılığı\n",
         "$1-\\dfrac{1}{4} = \\dfrac{3}{4}$ olarek elde edilir.\n",
         "\n",
-        "\\$P(A_3|G_0) = \\dfrac{1}{4}*\\dfrac{1}{4} = \\dfrac{1}{16}$\\\n",
+        "$P(A_3|G_0) = \\dfrac{1}{4}*\\dfrac{1}{4} = \\dfrac{1}{16}$\n",
+        "\n",
         "Aynı şekilde diper durumlarıda hesaplarsak;\n",
         "\n",
         "$P(A_3|G_1) = \\dfrac{1}{4}*\\dfrac{3}{4} = \\dfrac{3}{16}$\\\n",
