--- a/ödev_3.ipynb
+++ b/ödev_3.ipynb
@@ -6,7 +6,7 @@
       "name": "ödev_3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP79ynp0yiNwwWLEueLn75Z",
+      "authorship_tag": "ABX9TyN0ps+vCrcCJO8nrfLRv/ES",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,17 +39,24 @@
         "\n",
         "**Çözüm:** Kanal üzerinden 2 bit gönderildiğine göre alıcı ver göndericinin elindeki bitler  {00,01,10,11} şeklinde olabilir. Olay kümelerini tanımlarsak\n",
         "\n",
-        "$ Gönderici = \\{G_0, G_1, G_2,G_3\\}$\\\n",
-        "$ Alıcı = \\{A_0, A_1, A_2,A_3\\}$\\\n",
-        "$ G_0 = A_0 = 00$\\\n",
-        "$ G_1 = A_1 = 01$\\\n",
-        "$ G_2 = A_2 = 10$\\\n",
+        "$ Gönderici = \\{G_0, G_1, G_2,G_3\\}$\n",
+        "\n",
+        "$ Alıcı = \\{A_0, A_1, A_2,A_3\\}$\n",
+        "\n",
+        "$ G_0 = A_0 = 00$\n",
+        "\n",
+        "$ G_1 = A_1 = 01$\n",
+        "\n",
+        "$ G_2 = A_2 = 10$\n",
+        "\n",
         "$ G_3 = A_3 = 11$\n",
         "\n",
         "şeklinde oluşturabiliriz.\n",
         "\n",
         "Öncelikle alıcının 11 bitlerini alma olasılığını hesaplayalım.  \n",
-        "$P(A_3) = P(A_3\\cap G_0) + P(A_3\\cap G_1) + P(A_3\\cap G_2) + P(A_3\\cap G_3)$\\\n",
+        "$P(A_3) = P(A_3\\cap G_0) + P(A_3\\cap G_1) + P(A_3\\cap G_2) + P(A_3\\cap G_3)$\n",
+        "\n",
+        "\n",
         "$P(A_3) = P(A_3|G_0)P(G_0) + P(A_3|G_1)P(G_1) + P(A_3|G_2)P(G_2) + P(A_3|G_3)P(G_3)$\n",
         "\n",
         "Gönderici 00 bitlerini gönderdiğinde alıcının 11 bitlerini alma olılığını hesaplayım. Bunun için iki bitinde değişme olasılığını bulmamız gerekir. Bir bitin değişme olasılığı $\\dfrac{1}{4}$ ise değişmeme olasılığı\n",
@@ -59,8 +66,10 @@
         "\n",
         "Aynı şekilde diper durumlarıda hesaplarsak;\n",
         "\n",
-        "$P(A_3|G_1) = \\dfrac{1}{4}*\\dfrac{3}{4} = \\dfrac{3}{16}$\\\n",
-        "$P(A_3|G_2) = \\dfrac{3}{4}*\\dfrac{1}{4} = \\dfrac{3}{16}$\\\n",
+        "$P(A_3|G_1) = \\dfrac{1}{4}*\\dfrac{3}{4} = \\dfrac{3}{16}$\n",
+        "\n",
+        "$P(A_3|G_2) = \\dfrac{3}{4}*\\dfrac{1}{4} = \\dfrac{3}{16}$\n",
+        "\n",
         "$P(A_3|G_3) = \\dfrac{3}{4}*\\dfrac{3}{4} = \\dfrac{9}{16}$\n",
         "\n",
         "değerlerini elde ederiz.\n",
@@ -70,8 +79,10 @@
         "\n",
         "Diğer bitlerin üretilme olasılıkları;\n",
         "\n",
-        "$P(G_1)=\\dfrac{2}{5}*\\dfrac{3}{5} = \\dfrac{6}{25}$\\\n",
-        "$P(G_2)=\\dfrac{3}{5}*\\dfrac{2}{5} = \\dfrac{6}{25}$\\\n",
+        "$P(G_1)=\\dfrac{2}{5}*\\dfrac{3}{5} = \\dfrac{6}{25}$\n",
+        "\n",
+        "$P(G_2)=\\dfrac{3}{5}*\\dfrac{2}{5} = \\dfrac{6}{25}$\n",
+        "\n",
         "$P(G_3)=\\dfrac{3}{5}*\\dfrac{3}{5} = \\dfrac{9}{25}$\n",
         "\n",
         "Böylece \n",
