--- a/ödev_4.ipynb
+++ b/ödev_4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ödev_4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNB5p+k/OfRvqs592oNdg8a",
+      "authorship_tag": "ABX9TyPSW6gwpamAid2aWYex1Zgv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##Semih Sevim 196112005\n",
+        "**Semih Sevim 196112005**\n",
         "\n",
         "**Problem 1:** Bir editör kontrol ettiği metinlerde %10 olasıkla yazım yanlışı bulmaktadır. Editörün herhangi bir metin içerisinde kontrol ettiği 20 kelimeden \n",
         "7'sinin yanlış olma olasığı kaçtır?\n",
@@ -40,7 +40,7 @@
         "$n = 20$ kelime içerisinde\n",
         "$k = 7$ 'unun yanlış yazılma olasığılı;\n",
         "\n",
-        "$P(Yanlış = k) = {n\\choose k} p^k(1-p)^{n-k} = {20\\choose 7} (0.1)^{7}(1-0.1)^{20-7} = 0.00197$\n",
+        "$P(Y = k) = {n\\choose k} p^k(1-p)^{n-k} = {20\\choose 7} (0.1)^{7}(1-0.1)^{20-7} = 0.00197$\n",
         "\n",
         "\n",
         "\n"
