--- a/ödev_4.ipynb
+++ b/ödev_4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ödev_4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSW6gwpamAid2aWYex1Zgv",
+      "authorship_tag": "ABX9TyOLr0zTFae+NBJwLsLAEuUg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
         "**Problem 2:** Bir ATM yazılımındaki bir bug nedeniyle yapılan 60 işlemden 5'ini gerçekleştirememektedir. Gerçekleştirilen 50 işlemden 3'ünün gerçekleşmeme olasılığı kaçtır?\n",
         "\n",
         "\n",
-        "**Çözüm:** ATM $P =\\frac{5}{60}$ olasılıkla yanlış işlem gerçekleştirmektedir. Gerçekleştirilen  n = 50 işlemin beklene değeri hesapnırsa;\n",
+        "**Çözüm:** ATM $P =\\frac{5}{60}$ olasılıkla hatalı işlem gerçekleştirmektedir. Gerçekleştirilen  n = 50 işlemin beklene değeri hesapnırsa;\n",
         "\n",
         "$E[X]=\\lambda = np = 50*\\frac{5}{12}$\n",
         "\n",
