--- a/ödev_3.ipynb
+++ b/ödev_3.ipynb
@@ -6,7 +6,7 @@
       "name": "ödev_3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN0ps+vCrcCJO8nrfLRv/ES",
+      "authorship_tag": "ABX9TyMEPHEMO3wmivIJL6jaS0ic",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "source": [
         "**Semih SEVİM 196112005**\n",
         "\n",
-        "**Problem:** Sinyal iletiminde kanal üzerinde belirli bir gürültünün olduğu ve bitlerin $\\dfrac{1}{4}$ olasılıkla değiştiği bilinmektedir.  Ayrıca göndericinin ilettiği bitler $\\dfrac{2}{5}$  olasılıkla 0 değerini almaktadır.  Alıcı 11 bitlerini aldığına göre göndericinin 00 bitini gönderme olasılığı kaçtır? \n",
+        "**Problem:** Sinyal iletiminde kanal üzerinde belirli bir gürültünün olduğu ve bitlerin $\\dfrac{1}{4}$ olasılıkla değiştiği bilinmektedir.  Ayrıca göndericinin ilettiği bitler $\\dfrac{2}{5}$  olasılıkla 0 değerini almaktadır.  Alıcı 11 bitlerini aldığına göre göndericinin 00 bitlerini gönderme olasılığı kaçtır? \n",
         "\n",
         "\n",
         "**Çözüm:** Kanal üzerinden 2 bit gönderildiğine göre alıcı ver göndericinin elindeki bitler  {00,01,10,11} şeklinde olabilir. Olay kümelerini tanımlarsak\n",
