--- a/ödev_2.ipynb
+++ b/ödev_2.ipynb
@@ -34,7 +34,7 @@
         "Semih Sevim\n",
         "196112005\n",
         "\n",
-        "**Problem:** Ali ve Ahmet kendi aralarında bir oyun oynamaya karar verirler ve Ahmet 30 küçük kağıda sorular yazıp bir torbaya koyar. Ahmet hazırladığı 30 sorunun 10 tanesini Ali'nin cevap verebileceği konular üzerine seçer. Daha sonra Ahmet Ali'den kağıttan rastegele seçtiği 3 soruya cevap vermesini, doğru bildiği sorular için 2'şer puan kazanacağını, cevap vermediği her soru için ise puanından 1 puan düşeceğini söyler. Bu durumda Ali'nin en az 0 puan alması  olasılığı kaçtır?\n",
+        "**Problem:** Ali ve Ahmet kendi aralarında bir oyun oynamaya karar verirler ve Ahmet 30 küçük kağıda sorular yazıp bir torbaya koyar. Ahmet hazırladığı 30 sorunun 10 tanesini Ali'nin cevap verebileceği konular üzerine seçer. Daha sonra Ahmet Ali'den kağıtlardan rastegele seçtiği 3 soruya cevap vermesini ister. Doğru bildiği sorular için 2'şer puan kazanacağını, cevap vermediği her soru için ise puanından 1 puan düşeceğini söyler. Bu durumda Ali'nin en az 0 puan alması  olasılığı kaçtır?\n",
         "\n",
         "\n",
         "---\n",
